# erase-sure

./: .gitignore  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  LICENSE  PDF_GENERATION_DEBUG_ANALYSIS.md  PDF_GENERATION_FINAL_FIX.md  PDF_GENERATION_FIX_SUMMARY.md  README.md  SIGNING_IMPLEMENTATION.md  SUDO_REQUIREMENTS.md  TAURI_IMPLEMENTATION_SUMMARY.md  TESTING.md  actual_cert.json  current_cert.json  run-dev.sh  run-gui-sudo.sh  run.sh  test_backup_cert.json  test_backup_integration.sh  test_backup_sample_123.json  test_cert2.json  test_certificate_flows.sh  test_key.ed25519  test_new_key.ed25519  test_pdf_generation.sh  test_security_edge_cases.sh  test_wipe_cert.json
.github/: README.md  copilot-instructions.md
core/: Cargo.toml  TESTING_LINUX.md  test_discovery.sh  test_schema_load.rs
core/examples/: test_planner.rs
core/src/: backup.rs  cert.rs  cert_pdf.rs  cli.rs  cmd.rs  device.rs  lib.rs  logging.rs  main.rs  pdf.rs  pdf_old.rs  pdf_printpdf.rs  pdf_python.rs  pdf_simple.rs  python_pdf_generator.py  schema.rs  signer.rs  test_real_cert.rs  wipe.rs
core/test_data/: e2e_test_cert.json  invalid_signed_cert.json  keygen.rs  test_privkey.key  unsigned_cert.json  valid_signed_cert.json  wrong_algorithm_cert.json  wrong_pubkey_id_cert.json
core/tests/: integration_tests.rs  signer_integration_tests.rs  validation_tests.rs
docs/: CERTIFICATE_CLI_REFERENCE.md  CERTIFICATE_HANDLING.md  CERTIFICATE_IMPLEMENTATION_SUMMARY.md  CERTIFICATE_PAGE_ACCEPTANCE_TESTS.md  DESTRUCTIVE_WIPE_IMPLEMENTATION.md  HPA_DCO_TESTING_GUIDE.md  KALI_DEMO_GUIDE.md  PRD.md  (+3 more)
(+127 files in other folders)
