[package]
name = "securewipe"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
aes = "0.8"
ctr = "0.9"
rand = "0.8"
rand_chacha = "0.3"
printpdf = "0.7"
qrcode = "0.14"
image = "0.24"
dirs = "5.0"
tracing = "0.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.21"

[dev-dependencies]
tempfile = "3.0"
thiserror = "1.0"
tokio-test = "0.4"
assert_cmd = "2.0"